--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             const [currentTime, setCurrentTime] = useState(0);
             const [leaderboard, setLeaderboard] = useState([]);
             const [totalScore, setTotalScore] = useState(0);
+            const [levelQuestions, setLevelQuestions] = useState([]);
 
             const allQuestions = [
                 { question: "What is Cardano?", options: ["A cryptocurrency", "A blockchain platform", "A wallet", "An exchange"], correct: 1, explanation: "Cardano is a third-generation blockchain platform designed for smart contracts and decentralized applications." },
@@ -172,7 +173,9 @@
                         setCurrentTime(Date.now());
                     }, 100);
                 }
-                return () => clearInterval(interval);
+                return () => {
+                    if (interval) clearInterval(interval);
+                };
             }, [gameState, startTime]);
 
             const loadLeaderboard = async () => {
