--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <div className="min-h-screen bg-gradient-to-br from-blue-900 via-blue-700 to-cyan-600 flex items-center justify-center p-4">
                     <div className="bg-white rounded-3xl shadow-2xl p-8 max-w-md w-full">
                         <div className="text-center mb-6">
-                            <img src="https://imgur.com/a/zAB831P" alt="Logo" className="w-20 h-20 mx-auto rounded-full mb-4 object-cover" />
+                            <img src="https://i.imgur.com/W0XeBvj.png" alt="Logo" className="w-20 h-20 mx-auto rounded-full mb-4 object-cover" />
                             <h1 className="text-4xl font-bold text-gray-800 mb-2">SUPERIOR GAME</h1>
                             <p className="text-gray-600">Master Cardano - 10 Levels Challenge</p>
                             {playerName && (
